--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 <br>
     <p>Press <button>Enter</button> to start.</p>
     <div id="preloaded_resc">
-    <img src="https://github.com/Dungeoar/Dungeoar/blob/main/bg.0.png?raw=true" hidden>
-    <img src="https://github.com/Dungeoar/Dungeoar/blob/main/bg.1.png?raw=true" hidden>
-    <img src="https://github.com/Dungeoar/Dungeoar/blob/main/bg.2.png?raw=true" hidden>
-    <img src="https://github.com/Dungeoar/Dungeoar/blob/main/bg.3.png?raw=true" hidden>
+    <img src="bg.0.png hidden>
+    <img src="bg.1.png" hidden>
+    <img src="bg.2.png" hidden>
+    <img src="bg.3.png" hidden>
   </div>
  <script>
   const title = document.getElementById('title')
