finished stack flair and added inventory in L2

--- a/L1/index.html
+++ b/L1/index.html
@@ -2,10 +2,12 @@
 <html>
 
 <head>
+  <title>Dungeoar</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width" />
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
+
 <body class="l1">
   <div id="img"><img src="char__3_-removebg-preview (1).png" id="imgEl" /></div>
   <div id="sword">
