--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width" />
   <title>Dungeoar</title>
+  <link href="CreditsStyles.css" rel="stylesheet" type="text/css">
   <style>
     button {
       background-color: #eee;
-      border-radius: 3px;
+      border-radius: 5px;
       border: 1px solid #b4b4b4;
       box-shadow: 0 1px 1px rgba(0, 0, 0, .2), 0 2px 0 0 rgba(255, 255, 255, .7) inset;
       color: #333;
@@ -19,6 +20,12 @@
       padding: 2px 4px;
       white-space: nowrap;
       font-family: monospace;
+      position: relative;
+      bottom:5px;
+    }
+    #title {
+      width: 30%;
+      height: 30%;
     }
   </style>
 </head>
@@ -36,7 +43,7 @@
   <br>
   <br>
   <br>
-  <p>Press <button>Enter</button> to start.</p>
+  <h1>Press <button>Enter</button> to start.</h1>
   <div id="preloaded_resc">
     <img src="https://github.com/Dungeoar/Dungeoar/blob/main/bg.0.png?raw=true" hidden>
     <img src="https://github.com/Dungeoar/Dungeoar/blob/main/bg.1.png?raw=true" hidden>
