--- a/L2/index.html
+++ b/L2/index.html
@@ -1,116 +1,162 @@
 <html>
-    <head>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width" />
-      <title>RPG Webgame Testing</title>
-      <link href="l2Style.css" rel="stylesheet" type="text/css">
-      <script>
-        let x = sessionStorage.getItem('xpos');
-        let y = sessionStorage.getItem('ypos') - 30;   
-        var isMonsterDead = false;
-        function setUp() {
-          document.getElementById("img").style.left = parseFloat(x);
-          document.getElementById("img").style.top = parseFloat(y);
-          if(sessionStorage.getItem("3tv8fhwin") === "true")
-          {
-            document.getElementById("nme1").remove();
-            document.getElementById("imgBeta").src = "Key-trimmy.png" 
-            isMonsterDead = true;   
-          }
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width" />
+  <title>Dungeoar</title>
+  <link href="l2Style.css" rel="stylesheet" type="text/css">
+  <script>
+    let x = sessionStorage.getItem('xpos');
+    let y = sessionStorage.getItem('ypos') - 30;
+    var isMonsterDead = false;
+    function setUp() {
+      document.getElementById("img").style.left = parseFloat(x);
+      document.getElementById("img").style.top = parseFloat(y);
+      if (sessionStorage.getItem("3tv8fhwin") === "true") {
+        document.getElementById("nme1").remove();
+        document.getElementById("imgBeta").src = "Key-trimmy.png"
+        isMonsterDead = true;
+      }
+    }
+  </script>
+</head>
+
+<body class="l2" onload="setUp();">
+  <div id="hitbox_sword" style="position: relative;bottom: 63px;width:27.5px;height: 58.5px;"><img src="sword.png"
+      id="swordImg" /></div>
+  </div>
+  <div id="invContainer"
+    style="background-color: rgba(30, 30, 30, 0.5);width:365px;height:250px;border-radius:0.5em;position:relative;top:100px;right:350px;">
+    <div class="invslot" id="slot1"
+      style="background-color: rgba(20, 20, 20, 0.75);width:50px;height:50px;border-radius:0.5em;position:relative;top:25px;left:25px;">
+    </div>
+    <div id="slot2"
+      style="background-color: rgba(20, 20, 20, 0.75);width:50px;height:50px;border-radius:0.5em;position:relative;bottom:25px;left:85px;">
+    </div>
+    <div id="slot3"
+      style="background-color: rgba(20, 20, 20, 0.75);width:50px;height:50px;border-radius:0.5em;position:relative;bottom:75px;left:145px;">
+    </div>
+    <div id="slot4"
+      style="background-color: rgba(20, 20, 20, 0.75);width:50px;height:50px;border-radius:0.5em;position:relative;left:205px;bottom:125px;">
+    </div>
+    <div id="slot5"
+      style="background-color: rgba(20, 20, 20, 0.75);width:50px;height:50px;border-radius:0.5em;position:relative;left:265px;bottom:175px;">
+    </div>
+    <div id="slot6"
+      style="background-color: rgba(20, 20, 20, 0.75);width:50px;height:50px;border-radius:0.5em;position:relative;bottom:165px;left:25px">
+    </div>
+    <div id="slot7"
+      style="background-color: rgba(20, 20, 20, 0.75);width:50px;height:50px;border-radius:0.5em;position:relative;bottom:215px;left:85px;">
+    </div>
+    <div id="slot8"
+      style="background-color: rgba(20, 20, 20, 0.75);width:50px;height:50px;border-radius:0.5em;position:relative;bottom:265px;left:145px;">
+    </div>
+    <div id="slot9"
+      style="background-color: rgba(20, 20, 20, 0.75);width:50px;height:50px;border-radius:0.5em;position:relative;bottom:315px;left:205px;">
+    </div>
+    <div id="slot10"
+      style="background-color: rgba(20, 20, 20, 0.75);width:50px;height:50px;border-radius:0.5em;position:relative;bottom:365px;left:265px;">
+    </div>
+    <div id="invBar"
+      style="background-color: rgba(20, 20, 20, 0.75);width:290px;height:20px;border-radius:0.5em;position:relative;bottom:355px;left:25px;">
+    </div>
+    <div id="invWeapon"
+      style="background-color: rgba(20, 20, 20, 0.75);width:50px;height:50px;border-radius:0.5em;position:relative;bottom:340px;left:25px;">
+    </div>
+    <div id="invArmor"
+      style="background-color: rgba(20, 20, 20, 0.75);width:50px;height:50px;border-radius:0.5em;position:relative;bottom:390px;left:85px;">
+    </div>
+    <div id="invNoIdea"
+      style="background-color: rgba(20, 20, 20, 0.75);width:50px;height:50px;border-radius:0.5em;position:relative;bottom:440px;left:145px;">
+    </div>
+    <div id="invNoIdea"
+      style="background-color: rgba(20, 20, 20, 0.75);width:50px;height:50px;border-radius:0.5em;position:relative;bottom:490px;left:205px;">
+    </div>
+    <div id="invNoIdea"
+      style="background-color: rgba(20, 20, 20, 0.75);width:50px;height:50px;border-radius:0.5em;position:relative;bottom:540px;left:265px;">
+    </div>
+  </div>
+  <div id="nme1"><img src="3tv8fh-nme.png" id="nme" /></div>
+  <div><img id="imgBeta" /></div>
+  <div id="door"><img id="doorimg" src="door.png"></div>
+  <div id="img"><img src="char (4) (2).png" id="imgEl" /></div>
+  <script type="text/javascript">
+    (function () {
+      function DOMelementOverlapCheck(div1, div2) {
+        const domRect1 = div1.getBoundingClientRect();
+        const domRect2 = div2.getBoundingClientRect();
+        return !(
+          domRect1.top > domRect2.bottom ||
+          domRect1.right < domRect2.left ||
+          domRect1.bottom < domRect2.top ||
+          domRect1.left > domRect2.right
+        );
+      }
+      const nmeDiv = document.getElementById("nme1");
+      var xAxis = parseFloat(x);
+      var yAxis = parseFloat(y);
+      const moveSpeed = 10;
+      const div = document.getElementById('img');
+      document.onkeydown = function (event) {
+        switch (event.keyCode) {
+          case 37:
+            xAxis -= moveSpeed;
+            div.style.left = xAxis + 'px';
+            if (DOMelementOverlapCheck(nmeDiv, div) === true && isMonsterDead === false) {
+              self.location = "/Battle/?id=3tv8fh";
+              sessionStorage.setItem("charHp", "3");
+              sessionStorage.setItem("nmeHp", "3");
+            }
+            else if (DOMelementOverlapCheck(document.getElementById("imgBeta"), div)) {
+              document.getElementById("imgBeta").style.visibility = 'hidden';
+            }
+            break;
+          case 38:
+            yAxis -= moveSpeed;
+            div.style.top = yAxis + 'px';
+            if (DOMelementOverlapCheck(nmeDiv, div) === true && isMonsterDead === false) {
+              self.location = "/Battle/?id=3tv8fh";
+              sessionStorage.setItem("charHp", "3");
+              sessionStorage.setItem("nmeHp", "3");
+            }
+            else if (DOMelementOverlapCheck(document.getElementById("imgBeta"), div)) {
+              document.getElementById("imgBeta").style.visibility = 'hidden';
+            }
+            break;
+          case 39:
+            xAxis += moveSpeed;
+            div.style.left = xAxis + 'px';
+            if (DOMelementOverlapCheck(nmeDiv, div) === true && isMonsterDead === false) {
+              self.location = "/Battle/?id=3tv8fh";
+              sessionStorage.setItem("charHp", "3");
+              sessionStorage.setItem("nmeHp", "3");
+            }
+            else if (DOMelementOverlapCheck(document.getElementById("imgBeta"), div)) {
+              document.getElementById("imgBeta").style.visibility = 'hidden';
+            }
+            break;
+          case 40:
+            yAxis += moveSpeed;
+            div.style.top = yAxis + 'px';
+            if (DOMelementOverlapCheck(nmeDiv, div) === true && isMonsterDead === false) {
+              self.location = "/Battle/?id=3tv8fh";
+              sessionStorage.setItem("charHp", "3");
+              sessionStorage.setItem("nmeHp", "3");
+            }
+            else if (DOMelementOverlapCheck(document.getElementById("imgBeta"), div)) {
+              document.getElementById("imgBeta").style.visibility = 'hidden';
+            }
+            break;
+          case 17:
+            if (isMonsterDead === true) {
+              sessionStorage.setItem("3tv8fhwin", "true");
+            }
+            location.self()
+            break;
         }
-      </script>
-    </head>
-    <body class = "l2" onload="setUp();">
-    
-        <div id = "nme1"><img src="3tv8fh-nme.png" id="nme"/></div>
-        <div><img id="imgBeta"/></div>
-        <div id="door"><img id="doorimg" src="door.png"></div>
-        <div id="img"><img src="char (4) (2).png" id="imgEl"/></div>
-        <script type="text/javascript">
-            (function() {
-                function DOMelementOverlapCheck(div1, div2) {
-                const domRect1 = div1.getBoundingClientRect();
-                const domRect2 = div2.getBoundingClientRect();
-                return !(
-                  domRect1.top > domRect2.bottom ||
-                  domRect1.right < domRect2.left ||
-                  domRect1.bottom < domRect2.top ||
-                  domRect1.left > domRect2.right
-                );
-              }
-              const nmeDiv = document.getElementById("nme1");
-              var xAxis = parseFloat(x);
-              var yAxis = parseFloat(y);
-              const moveSpeed = 10;
-              const div = document.getElementById('img');
-              document.onkeydown = function(event) {
-                switch (event.keyCode) {
-                  case 37:
-                    xAxis -= moveSpeed;
-                    div.style.left = xAxis + 'px';
-                    if(DOMelementOverlapCheck(nmeDiv, div) === true && isMonsterDead === false)
-                    {
-                      self.location="/Battle/?id=3tv8fh";
-                      sessionStorage.setItem("charHp", "3");
-                      sessionStorage.setItem("nmeHp", "3");
-                    }
-                    else if(DOMelementOverlapCheck(document.getElementById("imgBeta"), div))
-                    {
-                      document.getElementById("imgBeta").style.visibility = 'hidden';
-                    } 
-                    break;
-                  case 38:
-                    yAxis -= moveSpeed;
-                    div.style.top = yAxis + 'px';
-                    if(DOMelementOverlapCheck(nmeDiv, div) === true && isMonsterDead === false)
-                    {
-                      self.location="/Battle/?id=3tv8fh";
-                      sessionStorage.setItem("charHp", "3");
-                      sessionStorage.setItem("nmeHp", "3");
-                    }
-                    else if(DOMelementOverlapCheck(document.getElementById("imgBeta"), div))
-                    {
-                      document.getElementById("imgBeta").style.visibility = 'hidden';
-                    } 
-                    break;
-                  case 39:
-                    xAxis += moveSpeed;
-                    div.style.left = xAxis + 'px';
-                    if(DOMelementOverlapCheck(nmeDiv, div) === true && isMonsterDead === false)
-                    {
-                      self.location="/Battle/?id=3tv8fh";
-                      sessionStorage.setItem("charHp", "3");
-                      sessionStorage.setItem("nmeHp", "3");
-                    }
-                    else if(DOMelementOverlapCheck(document.getElementById("imgBeta"), div))
-                    {
-                      document.getElementById("imgBeta").style.visibility = 'hidden';
-                    } 
-                    break;
-                  case 40: 
-                    yAxis += moveSpeed;
-                    div.style.top = yAxis + 'px';
-                    if(DOMelementOverlapCheck(nmeDiv, div) === true && isMonsterDead === false)
-                    {
-                      self.location="/Battle/?id=3tv8fh";
-                      sessionStorage.setItem("charHp", "3");
-                      sessionStorage.setItem("nmeHp", "3");
-                    }
-                    else if(DOMelementOverlapCheck(document.getElementById("imgBeta"), div))
-                    {
-                      document.getElementById("imgBeta").style.visibility = 'hidden';
-                    } 
-                   break;
-                  case 17:
-                    if(isMonsterDead === true)
-                    {
-                      sessionStorage.setItem("3tv8fhwin", "true");
-                    }
-                    location.self()
-                    break;
-                }
-              };
-            })();
-        </script>
-    </body>
+      };
+    })();
+  </script>
+</body>
+
 </html>
