--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width" />
   <title>Dungeoar</title>
-  <link href="CreditsStyles.css" rel="stylesheet" type="text/css">
+  <link href="Style.css" rel="stylesheet" type="text/css">
   <style>
     button {
       background-color: #eee;
@@ -35,11 +35,14 @@
     }
     body {
       background-image: url("bg.1.png");  
+      background-color: rgba(67, 173, 51, 255);
     }
   </style>
 </head>
 
 <body id="body" style="text-align: center;">
+  <div id="GithubLogoWrapper"><a href="https://github.com/Dungeoar/Dungeoar"><img id="GithubLogoImg" src="GithubLogo.png"/></a></div>
+  <img src="title.png" id="title" /> 
   <br>
   <br>
   <br>
