working on  reading inventory sessionstorage

--- a/L2/index.html
+++ b/L2/index.html
@@ -27,52 +27,52 @@
   </div>
   <div id="invContainer"
     style="background-color: rgba(30, 30, 30, 0.5);width:365px;height:250px;border-radius:0.5em;position:relative;top:100px;right:350px;">
-    <div class="invslot" id="slot1"
+    <div class="invslot" id="slot1" class="invSlot"
       style="background-color: rgba(20, 20, 20, 0.75);width:50px;height:50px;border-radius:0.5em;position:relative;top:25px;left:25px;">
     </div>
-    <div id="slot2"
+    <div id="slot2" class="invSlot"
       style="background-color: rgba(20, 20, 20, 0.75);width:50px;height:50px;border-radius:0.5em;position:relative;bottom:25px;left:85px;">
     </div>
-    <div id="slot3"
+    <div id="slot3" class="invSlot"
       style="background-color: rgba(20, 20, 20, 0.75);width:50px;height:50px;border-radius:0.5em;position:relative;bottom:75px;left:145px;">
     </div>
-    <div id="slot4"
+    <div id="slot4" class="invSlot"
       style="background-color: rgba(20, 20, 20, 0.75);width:50px;height:50px;border-radius:0.5em;position:relative;left:205px;bottom:125px;">
     </div>
-    <div id="slot5"
+    <div id="slot5" class="invSlot"
       style="background-color: rgba(20, 20, 20, 0.75);width:50px;height:50px;border-radius:0.5em;position:relative;left:265px;bottom:175px;">
     </div>
-    <div id="slot6"
+    <div id="slot6" class="invSlot"
       style="background-color: rgba(20, 20, 20, 0.75);width:50px;height:50px;border-radius:0.5em;position:relative;bottom:165px;left:25px">
     </div>
-    <div id="slot7"
+    <div id="slot7" class="invSlot"
       style="background-color: rgba(20, 20, 20, 0.75);width:50px;height:50px;border-radius:0.5em;position:relative;bottom:215px;left:85px;">
     </div>
-    <div id="slot8"
+    <div id="slot8" class="invSlot"
       style="background-color: rgba(20, 20, 20, 0.75);width:50px;height:50px;border-radius:0.5em;position:relative;bottom:265px;left:145px;">
     </div>
-    <div id="slot9"
+    <div id="slot9" class="invSlot"
       style="background-color: rgba(20, 20, 20, 0.75);width:50px;height:50px;border-radius:0.5em;position:relative;bottom:315px;left:205px;">
     </div>
-    <div id="slot10"
+    <div id="slot10" class="invSlot"
       style="background-color: rgba(20, 20, 20, 0.75);width:50px;height:50px;border-radius:0.5em;position:relative;bottom:365px;left:265px;">
     </div>
-    <div id="invBar"
+    <div id="invBar" class="invSlot"
       style="background-color: rgba(20, 20, 20, 0.75);width:290px;height:20px;border-radius:0.5em;position:relative;bottom:355px;left:25px;">
     </div>
-    <div id="invWeapon"
+    <div id="invWeapon" class="invSlot"
       style="background-color: rgba(20, 20, 20, 0.75);width:50px;height:50px;border-radius:0.5em;position:relative;bottom:340px;left:25px;">
     </div>
-    <div id="invArmor"
+    <div id="invArmor" class="invSlot"
       style="background-color: rgba(20, 20, 20, 0.75);width:50px;height:50px;border-radius:0.5em;position:relative;bottom:390px;left:85px;">
     </div>
-    <div id="invNoIdea"
+    <div id="invNoIdea" class="invSlot"
       style="background-color: rgba(20, 20, 20, 0.75);width:50px;height:50px;border-radius:0.5em;position:relative;bottom:440px;left:145px;">
     </div>
-    <div id="invNoIdea"
+    <div id="invNoIdea" class="invSlot"
       style="background-color: rgba(20, 20, 20, 0.75);width:50px;height:50px;border-radius:0.5em;position:relative;bottom:490px;left:205px;">
     </div>
-    <div id="invNoIdea"
+    <div id="invNoIdea" class="invSlot"
       style="background-color: rgba(20, 20, 20, 0.75);width:50px;height:50px;border-radius:0.5em;position:relative;bottom:540px;left:265px;">
     </div>
   </div>
