--- a/L1/index.html
+++ b/L1/index.html
@@ -6,12 +6,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width" />
   <link href="style.css" rel="stylesheet" type="text/css">
-  <script>
-    function readBg()
-    {
-      const inventoryArrayReadonly = JSON.parse(sessionStorage.getItem("inventoryArray"))
-    }
-  </script>
 </head>
 
 <body class="l1">
@@ -120,7 +114,7 @@
                 {
                   right: '350px'
                 }
-              ], 2500)
+              ], 500)
               invContainer.style.right = '350px'
               invOpen = false;
             }
@@ -133,7 +127,7 @@
                 {
                   right: '10px'
                 }
-              ], 2500)
+              ], 500)
               invContainer.style.right = '10px'
               invOpen = true;
             }
@@ -145,8 +139,8 @@
             }
             if (DOMelementOverlapCheck(SwordCollect, div) === true) {
               SwordCollectCollected = true;
-              inventoryArray[11] = "sword.png";
-              document.getElementById("invWeapon").style.backgroundImage = "url(" + inventoryArray[11] + ")";
+              inventoryArray[10] = "../InventoryAssets/sword.png";
+              document.getElementById("invWeapon").style.backgroundImage = "url(" + inventoryArray[10] + ")";
               document.getElementById("sword").style.display = 'none';
               document.getElementById("sword").style.display = 'none';
               document.getElementById("imgEl").src = "char (4) (2).png";
@@ -172,8 +166,8 @@
             }
             if (DOMelementOverlapCheck(SwordCollect, div) === true) {
               SwordCollectCollected = true;
-              inventoryArray[11] = "sword.png";
-              document.getElementById("invWeapon").style.backgroundImage = "url(" + inventoryArray[11] + ")";
+              inventoryArray[10] = "../InventoryAssets/sword.png";
+              document.getElementById("invWeapon").style.backgroundImage = "url(" + inventoryArray[10] + ")";
               document.getElementById("sword").style.display = 'none';
               document.getElementById("imgEl").src = "char (4) (2).png";
               console.log("DOM overlap detected");
@@ -198,8 +192,8 @@
             }
             if (DOMelementOverlapCheck(SwordCollect, div) === true) {
               SwordCollectCollected = true;
-              inventoryArray[11] = "sword.png";
-              document.getElementById("invWeapon").style.backgroundImage = "url(" + inventoryArray[11] + ")";
+              inventoryArray[10] = "../InventoryAssets/sword.png";
+              document.getElementById("invWeapon").style.backgroundImage = "url(" + inventoryArray[10] + ")";
               document.getElementById("sword").style.display = 'none';
               document.getElementById("sword").style.display = 'none';
               document.getElementById("imgEl").src = "char (4) (2).png";
@@ -225,8 +219,8 @@
             }
             if (DOMelementOverlapCheck(SwordCollect, div) === true) {
               SwordCollectCollected = true;
-              inventoryArray[11] = "sword.png";
-              document.getElementById("invWeapon").style.backgroundImage = "url(" + inventoryArray[11] + ")";
+              inventoryArray[10] = "../InventoryAssets/sword.png";
+              document.getElementById("invWeapon").style.backgroundImage = "url(" + inventoryArray[10] + ")";
               document.getElementById("sword").style.display = 'none';
               document.getElementById("sword").style.display = 'none';
               document.getElementById("imgEl").src = "char (4) (2).png";
