--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
     <img src="https://github.com/Dungeoar/Dungeoar/blob/main/bg.2.png?raw=true" hidden>
     <img src="https://github.com/Dungeoar/Dungeoar/blob/main/bg.3.png?raw=true" hidden>
   </div>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Press Start 2P">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width" />
   <title>Dungeoar</title>
   <link href="Style.css" rel="stylesheet" type="text/css">
   <style>
     button {
-      background-color: #eee;
+      background-color: #f00;
       border-radius: 5px;
-      border: 1px solid #b4b4b4;
-      box-shadow: 0 1px 1px rgba(0, 0, 0, .2), 0 2px 0 0 rgba(255, 255, 255, .7) inset;
+      border: 1px solid #7e1818;
+      box-shadow: 0 1px 1px rgb(0 0 0 / 20%), 0 2px 0 0 rgb(161 0 0) inset;
       color: #333;
       display: inline-block;
       font-size: .85em;
@@ -25,24 +26,34 @@
       line-height: 1;
       padding: 2px 4px;
       white-space: nowrap;
-      font-family: monospace;
+      font-family: 'Press Start 2P', serif;
       position: relative;
-      bottom:5px;
+      top: 0px;
+      color: #9c4839;
+      background-color: #7d2819;
     }
+
     #title {
       width: 30%;
       height: 30%;
     }
+
     body {
-      background-image: url("bg.1.png");  
+      background-image: url("bg.1.png");
       background-color: rgba(67, 173, 51, 255);
+    }
+
+    h1 {
+      font-family: 'Press Start 2P', serif;
+      color: #7d2819;
     }
   </style>
 </head>
 
 <body id="body" style="text-align: center;">
-  <div id="GithubLogoWrapper"><a href="https://github.com/Dungeoar/Dungeoar"><img id="GithubLogoImg" src="GithubLogo.png"/></a></div>
-  <img src="title.png" id="title" /> 
+  <div id="GithubLogoWrapper"><a href="https://github.com/Dungeoar/Dungeoar"><img id="GithubLogoImg"
+        src="GithubLogo.png" /></a></div>
+  <img src="titleBig.png" id="title" />
   <br>
   <br>
   <br>
