--- a/L2/index.html
+++ b/L2/index.html
@@ -76,7 +76,7 @@
 <body class="l2" onload="megaSetup();">
   <div id="invContainer"
     style="background-color: rgba(30, 30, 30, 0.5);width:365px;height:250px;border-radius:0.5em;position:relative;top:100px;right:350px;">
-    <div id="slot1" class="invSlot"
+    <div class="invSlot" id="slot1" class="invSlot"
       style="background-color: rgba(20, 20, 20, 0.75);width:50px;height:50px;border-radius:0.5em;position:relative;top:25px;left:25px;">
     </div>
     <div id="slot2" class="invSlot"
