--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     document.onkeydown = function (event) {
       switch (event.key) {
         case 'Enter':
-          window.location = "/L1/"
+          window.location = "L1/"
           break;
       }
     }
